# xml-lens

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  xml-lens.cabal
.github/workflows/: haskell.yml
Text/XML/: Lens.hs
examples/: books.xml
