name:                xml-lens
version:             0.2
synopsis:            Lenses, traversals, and prisms for xml-conduit
description:         Lens-based DOM selector
homepage:            https://github.com/fumieval/xml-lens
bug-reports:         https://github.com/fumieval/xml-lens/issues
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (C) 2019 Fumiaki Kinoshita
category:            XML
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/fumieval/xml-lens.git

library
  default-language:   Haskell2010
  ghc-options: -Wall
  exposed-modules:     Text.XML.Lens
  build-depends:       base ==4.*
    , lens >= 4.0 && < 5
    , containers >= 0.4.0 && < 0.7
    , text >= 0.7 && <2
    , xml-conduit >= 1.1 && < 1.9
    , case-insensitive
