cabal-version: 2.4
name:                xml-lens
version:             0.3.1
synopsis:            Lenses, traversals, and prisms for xml-conduit
description:         This package provides DOM selectors based on lenses and prisms. See README.md for examples
homepage:            https://github.com/fumieval/xml-lens
bug-reports:         https://github.com/fumieval/xml-lens/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (C) 2021 Fumiaki Kinoshita
category:            XML
build-type:          Simple
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/fumieval/xml-lens.git

library
  default-language:   Haskell2010
  ghc-options: -Wall
  exposed-modules:     Text.XML.Lens
  build-depends:       base ==4.*
    , lens >= 4.0 && < 5.2
    , containers >= 0.4.0 && < 0.7
    , text >= 0.7 && <2
    , xml-conduit >= 1.1 && < 1.10
    , case-insensitive
